force-app/main/default/objects/Produto__c/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Código de Produto</label>
    <type>AutoNumber</type>
</CustomField>