force-app/main/default/objects/Produto__c/fields/DescricaoProduto__c.field-meta.xml
<CustomField>
    <fullName>DescricaoProduto__c</fullName>
    <label>Descrição de Produto</label>
    <type>TextArea</type>
</CustomField>