force-app/main/default/objects/Produto__c/fields/PrecoProduto__c.field-meta.xml
<CustomField>
    <fullName>PrecoProduto__c</fullName>
    <label>Preço do Produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>